# wallger

./: .gitignore  .pylintrc  CHANGELOG.md  README.md  TODO.md  check_format.py  checkformat.sh  chuy.json  format.py  main.py  pyproject.toml  readme.md  setup.cfg  setup.py
.github/old_workflows/: pylint.yml
.github/workflows/: codeql-analysis.yml  pylint.yml  python-app.yml  python-publish.yml  test_config.yml
doc/: README.md  config  config.json  exampleconfig  if_no_config
providers/: __init__.py  provider.py  unsplash.py  wallhaven.py
tests/: test_config.py  test_values.py
wallger/: __init__.py  __main__.py  constants.py  core.py  helpers.py  run.py  ui.py  wallhaven.py
wallger/core/: __init__.py  helpers.py
wallger/providers/: __init__.py  local.py  provider.py  unsplash.py  wallhaven.py
wmwc/: __init__.py  helpers.py
wmwc/functions/: dynamic_import.py  generate_class.py  get_config.py
wmwc/providers/: local.py  provider.py  unsplash.py  wallhaven.py
