[tool.poetry]
name = "wallger"
version = "1.0.0"
description = "Wallpaper changer for Linux, get images from Wallhaven, Unsplash and others!"
authors = ["Eliaz Bobadilla <eliaz.bobadilladev@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"

[tool.poetry.scripts]
wallger = 'wallger:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
