[tool.poetry]
name = "wallger"
version = "1.0.0"
description = "Wallpaper changer for Linux, get images from Wallhaven, Unsplash and others!"
authors = ["Eliaz Bobadilla <eliaz.bobadilladev@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/UltiRequiem/wallger"
repository = "https://github.com/UltiRequiem/wallger"
keywords = ["commands", "wallpapers", "utilities", "cli"]
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
black = "^21.7b0"

[tool.poetry.scripts]
wallger = 'wallger:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
